package Ejercicios.Ejercicio14.Clases;

public class BrazoRobotico extends Herramienta {
    
    public void nombre(){
        this.setNombre("Brazo Robotico");
    }
    public void pesoFijo(){
        this.setPeso(500.0);
    }
}
