package Ejercicios.Ejercicio14.Clases;

public class SensorInfrarrojo extends Herramienta{
    
    public void nombre(){
        this.setNombre("Sensor Infrarrojo");
    }
    public void pesoFijo(){
        this.setPeso(250.0);
    }
}
