package Ejercicios.Ejercicio14.Clases;

public class Taser extends Herramienta {
    
    public void nombre(){
        this.setNombre("Taser");
    }
    public void pesoFijo(){
        this.setPeso(300.0);
    }
}
